name:                crypto-pals
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tsenart/crypto-pals#readme
license:             BSD3
license-file:        LICENSE
author:              Tomás Senart
maintainer:          tsenart@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base64-bytestring
                     , base16-bytestring
                     , containers
                     , linear
                     , cassava
                     , vector
  default-language:    Haskell2010

executable crypto-pals-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crypto-pals
  default-language:    Haskell2010

test-suite crypto-pals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crypto-pals
                     , tasty
                     , tasty-hunit
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsenart/crypto-pals
